// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`если загрузка одного чанка зафейлилась 1 раз, все равно загрузит файл 1`] = `
Array [
  Array [
    "create_url",
    Object {
      "method": "POST",
    },
  ],
  Array [
    "upload_url&uploadId=upload-id-mock&partNumber=1",
    Object {
      "body": "mock-file-data",
      "method": "POST",
    },
  ],
  Array [
    "upload_url&uploadId=upload-id-mock&partNumber=2",
    Object {
      "body": "mock-file-data",
      "method": "POST",
    },
  ],
  Array [
    "upload_url&uploadId=upload-id-mock&partNumber=3",
    Object {
      "body": "mock-file-data",
      "method": "POST",
    },
  ],
  Array [
    "upload_url&uploadId=upload-id-mock&partNumber=4",
    Object {
      "body": "mock-file-data",
      "method": "POST",
    },
  ],
  Array [
    "upload_url&uploadId=upload-id-mock&partNumber=5",
    Object {
      "body": "mock-file-data",
      "method": "POST",
    },
  ],
  Array [
    "upload_url&uploadId=upload-id-mock&partNumber=1",
    Object {
      "body": "mock-file-data",
      "method": "POST",
    },
  ],
  Array [
    "confirm_url&uploadId=upload-id-mock&etags=etag-1,etag-2,etag-3,etag-4,etag-5",
    Object {
      "method": "POST",
    },
  ],
]
`;

exports[`на форме редактирования после загрузки файла привяжет панораму к офферу 1`] = `
Array [
  "linkExteriorPanoramaToOffer",
  Object {
    "category": "cars",
    "offerId": "offer-id",
    "panoramaId": "panorama-id-mock",
  },
]
`;

exports[`покажет ошибку если запрос на открытие сессии упал 1`] = `
Array [
  Object {
    "message": "Произошла ошибка. Попробуйте еще раз",
    "view": "error",
  },
]
`;

exports[`покажет ошибку если ручка получения урлов упала 1`] = `
Array [
  Object {
    "message": "Произошла ошибка. Попробуйте еще раз",
    "view": "error",
  },
]
`;

exports[`поллинг статуса при маунте начнется, если панорама находится в статусе PROCESSING 1`] = `
Array [
  "getExteriorPanorama",
  Object {
    "panoramaId": "panorama-exterior-id",
  },
]
`;

exports[`при выборе файла покажет алерт если размер файла больше допустимого 1`] = `"Вы пытаетесь загрузить файл размером 501 Мб. Допустимый размер файла - от 20 до 500 Мб."`;

exports[`при выборе файла покажет алерт если размер файла меньше допустимого 1`] = `"Вы пытаетесь загрузить файл размером 19 Мб. Допустимый размер файла - от 20 до 500 Мб."`;

exports[`при выборе файла покажет алерт если тип файла не видео 1`] = `"Вы пытаетесь загрузить файл некорректного типа. Допустимы только видео-файлы"`;

exports[`при выборе файла покажет алерт если файлов больше чем один 1`] = `"Вы пытаетесь загрузить больше, чем один файл. Пожалуйста, выберете только один"`;

exports[`при дропе файла покажет алерт если уже есть какая-то панорама 1`] = `"Чтобы добавить новую панораму, сначала удалите старую"`;

exports[`при загрузке валидного файла в начале загрузки сохранит статус в сторе 1`] = `
Array [
  Object {
    "isLoading": true,
  },
]
`;

exports[`при загрузке валидного файла по окончанию начнется поллинг статуса панорамы 1`] = `
Array [
  "getExteriorPanorama",
  Object {
    "panoramaId": "panorama-id-mock",
  },
]
`;

exports[`при загрузке валидного файла по окончанию покажет нотифайку 1`] = `
Array [
  Object {
    "message": "Видео загружено. В течение часа панорама появится в объявлении",
    "view": "success",
  },
]
`;

exports[`при загрузке валидного файла по окончанию сохранит полученный id панорамы в стор 1`] = `
Array [
  Object {
    "id": "panorama-id-mock",
  },
]
`;

exports[`при загрузке валидного файла процесс загрузки правильно нарежет файл для загрузки 1`] = `
Array [
  Array [
    "start",
    0,
  ],
  Array [
    "end",
    10485760,
  ],
  Array [
    "file",
    "file part from 0 to 10485760 bytes",
  ],
  Array [
    "start",
    10485760,
  ],
  Array [
    "end",
    20971520,
  ],
  Array [
    "file",
    "file part from 10485760 to 20971520 bytes",
  ],
  Array [
    "start",
    20971520,
  ],
  Array [
    "end",
    31457280,
  ],
  Array [
    "file",
    "file part from 20971520 to 31457280 bytes",
  ],
  Array [
    "start",
    31457280,
  ],
  Array [
    "end",
    41943040,
  ],
  Array [
    "file",
    "file part from 31457280 to 41943040 bytes",
  ],
  Array [
    "start",
    41943040,
  ],
  Array [
    "end",
    44040192,
  ],
  Array [
    "file",
    "file part from 41943040 to 44040192 bytes",
  ],
]
`;

exports[`при загрузке валидного файла процесс загрузки правильно сформирует урлы для запросов в аплоадер 1`] = `
Array [
  Array [
    "create_url",
    Object {
      "method": "POST",
    },
  ],
  Array [
    "upload_url&uploadId=upload-id-mock&partNumber=1",
    Object {
      "body": "mock-file-data",
      "method": "POST",
    },
  ],
  Array [
    "upload_url&uploadId=upload-id-mock&partNumber=2",
    Object {
      "body": "mock-file-data",
      "method": "POST",
    },
  ],
  Array [
    "upload_url&uploadId=upload-id-mock&partNumber=3",
    Object {
      "body": "mock-file-data",
      "method": "POST",
    },
  ],
  Array [
    "upload_url&uploadId=upload-id-mock&partNumber=4",
    Object {
      "body": "mock-file-data",
      "method": "POST",
    },
  ],
  Array [
    "upload_url&uploadId=upload-id-mock&partNumber=5",
    Object {
      "body": "mock-file-data",
      "method": "POST",
    },
  ],
  Array [
    "confirm_url&uploadId=upload-id-mock&etags=etag-1,etag-2,etag-3,etag-4,etag-5",
    Object {
      "method": "POST",
    },
  ],
]
`;

exports[`при отвязке панорамы отправит метрику 1`] = `
Array [
  Array [
    "panoramas",
    "exterior",
    "deletion",
    "remove-reason-mock",
    "panorama-id-mock",
  ],
]
`;

exports[`при отвязке панорамы сохранит в сторе пустой id 1`] = `
Array [
  Object {
    "id": "",
  },
]
`;

exports[`при отмене загрузки файла если пользователь подтвердил отмену сбросит статус в сторе 1`] = `
Array [
  Object {
    "id": "",
  },
]
`;

exports[`при отмене загрузки файла покажет сообщение о подтверждении 1`] = `
Array [
  "Вы действительно хотите прервать загрузку панорамы?",
]
`;

exports[`при повторной попытке загрузки, окончательно загрузить файл 1`] = `
Array [
  Object {
    "isLoading": true,
  },
]
`;

exports[`при повторной попытке загрузки, окончательно загрузить файл 2`] = `
Array [
  Object {
    "id": "panorama-id-mock",
  },
]
`;
